[gd_scene load_steps=2 format=3 uid="uid://sqrvmpueue8i"]

[ext_resource type="Script" path="res://ui/menus/main_menu/controls_menu/controls_menu.gd" id="1_script"]

[node name="ControlsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
text = "CONTROLS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlsContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 624.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ControlsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="KeyboardControls" type="VBoxContainer" parent="ControlsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Header" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Keyboard"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Grid" type="GridContainer" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
columns = 2

[node name="MovementLabel" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Movement"
horizontal_alignment = 1

[node name="MovementKeys" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "WASD"
horizontal_alignment = 1

[node name="Placeholder" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Placeholder
"
horizontal_alignment = 1

[node name="PlaceholderKey" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Placeholder"
horizontal_alignment = 1

[node name="Placeholder2" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Placeholder"
horizontal_alignment = 1

[node name="PlaceholderKey2" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Placeholder"
horizontal_alignment = 1

[node name="PauseLabel" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Pause"
horizontal_alignment = 1

[node name="PauseKey" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/KeyboardControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Escape"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="ControlsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ControllerControls" type="VBoxContainer" parent="ControlsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Header" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Controller"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Grid" type="GridContainer" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
columns = 2

[node name="MovementLabel" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Movement"
horizontal_alignment = 1

[node name="MovementButton" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Left Stick"
horizontal_alignment = 1

[node name="Placeholder" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Placeholder"
horizontal_alignment = 1

[node name="PlaceholderKey" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Placeholder"
horizontal_alignment = 1

[node name="Placeholder2" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Placeholder"
horizontal_alignment = 1

[node name="PlaceholderKey2" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Placeholder"
horizontal_alignment = 1

[node name="PauseLabel" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Pause"
horizontal_alignment = 1

[node name="PauseButton" type="Label" parent="ControlsContainer/MarginContainer/HBoxContainer/ControllerControls/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Start/Menu"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="TutorialButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -80.0
offset_right = -50.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Tutorial"

[connection signal="pressed" from="TutorialButton" to="." method="_on_tutorial_pressed"]
